# OGFN-Launcher

./: OBFUSCATION.md  next.config.ts  package-lock.json  package.json  webpack.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/home/: page.tsx
src/app/leaderboard/: page.tsx
src/app/register/: page.tsx
src/app/settings/: page.tsx
src/app/shop/: page.tsx
src/components/layout/: Sidebar.tsx
src/components/providers/: ConnectionMonitor.tsx  MusicProvider.tsx
src/lib/: config.ts
src/lib/api/: client.ts  splash-endpoints.ts
src/lib/stores/: auth.ts  music.ts  server-status.ts  session.ts
